[gd_scene load_steps=11 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Rope.tscn" type="PackedScene" id=2]
[ext_resource path="res://Person.tscn" type="PackedScene" id=3]
[ext_resource path="res://PersonManager.gd" type="Script" id=4]
[ext_resource path="res://LockedDoor.tscn" type="PackedScene" id=5]
[ext_resource path="res://PersonEater.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/stomachui.png" type="Texture" id=8]
[ext_resource path="res://StomachUI.gd" type="Script" id=9]
[ext_resource path="res://EndZone.tscn" type="PackedScene" id=12]

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 793.891, 260, 993.891, 420, -86.1092, 420, 113.891, 260, 993.891, -220, 793.891, 20, -86.1092, -220, 113.891, 20 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 1, 0, 5 ), PoolIntArray( 6, 4, 5, 7 ), PoolIntArray( 2, 6, 7, 3 ) ]
outlines = [ PoolVector2Array( -86.1092, -220, 993.891, -220, 993.891, 420, -86.1092, 420 ), PoolVector2Array( 113.891, 20, 793.891, 20, 793.891, 260, 113.891, 260 ) ]

[node name="TestWorld" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 80, 80 )
format = 1
tile_data = PoolIntArray( -327676, 8, 0, -327672, 8, 0, -262140, 7, 0, -262136, 7, 0, -196604, 7, 0, -196603, 5, 0, -196602, 6, 0, -196601, 5, 0, -196600, 7, 0, -131072, 8, 0, -131068, 7, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 7, 0, -131059, 8, 0, -65536, 7, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 7, 0, 0, 7, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 7, 0, 65536, 7, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 7, 0, 131072, 7, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 7, 0, 196608, 7, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 7, 0, 262144, 7, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 7, 0, 327680, 7, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 7, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 458752, 5, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0 )

[node name="LockedDoor" parent="." instance=ExtResource( 5 )]

[node name="PersonManager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Person" parent="PersonManager" instance=ExtResource( 3 )]
position = Vector2( 448.581, 324.654 )

[node name="Person2" parent="PersonManager" instance=ExtResource( 3 )]
position = Vector2( 420.682, 423.391 )

[node name="PersonEater" parent="PersonManager" instance=ExtResource( 6 )]
position = Vector2( 251.495, 258.636 )

[node name="PinJoint2D2" type="PinJoint2D" parent="PersonManager/PersonEater"]
position = Vector2( 5.73578, 12.1885 )
node_a = NodePath("../../Rope2/RopeSegment10")
node_b = NodePath("..")

[node name="PinJoint2D" type="PinJoint2D" parent="PersonManager/PersonEater"]
position = Vector2( 5.73578, 12.1885 )
node_a = NodePath("../../Rope/RopeSegment10")
node_b = NodePath("..")

[node name="Rope" parent="PersonManager" instance=ExtResource( 2 )]
position = Vector2( 448.563, 270.502 )

[node name="PinJoint2DA" parent="PersonManager/Rope/RopeSegment" index="2"]
node_a = NodePath("../../../Person")

[node name="Rope2" parent="PersonManager" instance=ExtResource( 2 )]
position = Vector2( 421.93, 368.308 )
rotation = 0.534242

[node name="PinJoint2DA" parent="PersonManager/Rope2/RopeSegment" index="2"]
node_a = NodePath("../../../Person2")

[node name="Camera2D" type="Camera2D" parent="PersonManager"]
current = true

[node name="PlayerUI" type="CanvasLayer" parent="PersonManager"]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )

[node name="Stomach" type="TextureRect" parent="PersonManager/PlayerUI"]
margin_right = 62.0
margin_bottom = 73.0
texture = ExtResource( 8 )
stretch_mode = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="PersonManager/PlayerUI/Stomach"]
show_behind_parent = true
margin_left = 12.0
margin_top = 15.0
margin_right = 53.0
margin_bottom = 61.0
color = Color( 0.0862745, 0.25098, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StomachBar" type="ColorRect" parent="PersonManager/PlayerUI/Stomach"]
show_behind_parent = true
margin_left = 12.0
margin_top = 56.0
margin_right = 53.0
margin_bottom = 61.0
color = Color( 0.741176, 0.317647, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerUI2" type="CanvasLayer" parent="PersonManager"]

[node name="RestartMessage" type="Label" parent="PersonManager/PlayerUI2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -7.0
margin_right = 58.0
margin_bottom = 7.0
text = "Press 'X' to restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PersonManager/PlayerUI2/RestartMessage"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
color = Color( 0, 0, 0, 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( 106.109, 0 )
navpoly = SubResource( 5 )

[node name="SearchPositions" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="SearchPositions" groups=[
"search_positions",
]]
position = Vector2( 580, 340 )

[node name="Position2D2" type="Position2D" parent="SearchPositions" groups=[
"search_positions",
]]
position = Vector2( 1000, -40 )

[node name="Position2D3" type="Position2D" parent="SearchPositions" groups=[
"search_positions",
]]
position = Vector2( 100, -40 )

[node name="EndZone" parent="." instance=ExtResource( 12 )]
position = Vector2( 520, -156 )

[node name="Label" type="Label" parent="."]
margin_left = 364.0
margin_top = 472.0
margin_right = 640.0
margin_bottom = 486.0
text = "use the Q and E keys to switch characters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
color = Color( 0, 0, 0, 1 )

[editable path="PersonManager/PersonEater"]

[editable path="PersonManager/Rope"]

[editable path="PersonManager/Rope/RopeSegment"]

[editable path="PersonManager/Rope2"]

[editable path="PersonManager/Rope2/RopeSegment"]
